deploy/kubernetes/fleetshift-server/route-http.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fleetshift
spec:
  to:
    kind: Service
    name: fleetshift-server
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
